--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/Ayse-Akdede/character-manager#readme",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.6.3"
   }
 }
