--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "parcel-bundler": "^1.12.3",
+    "showdown": "^1.9.0",
     "typescript": "^3.6.3"
   }
 }
